@@ -2,6 +2,8 @@ Changelog
 ---------
 
 ### 1.3.2
+* __Processing of protein-peptide interactions via --peptides__
+* option to keep modified residues as ligands (--keepmod)
 * Improved code for reports
 * Smart ordering of ligand in composite compounds
 * Fixes handling and visualization of DNA/RNA
